# Chaotic_AI

./: .dockerignore  CMakeLists.txt  Makefile  README.md  package-lock.json
.VSCodeCounter/2025-11-29_20-36-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-11-29_20-42-56/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-12-01_16-22-28/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-12-06_02-01-49/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
adapters/node-embedded/: package-lock.json  package.json
adapters/node-embedded/src/: autoHook.ts  native.ts  sdk.ts
adapters/node-embedded/src/hooks/: express.ts  http.ts
adapters/python-embedded/: __init__.py  autoHook.py  binding.py  decorators.py
cli/: package.json
cli/src/: config.ts  index.ts
cli/src/commands/: config.ts  login.ts  run.ts
database/: .env  package-lock.json  package.json  prisma.config.ts
database/prisma/: schema.prisma
database/prisma/migrations/20251105170650_init/: migration.sql
infra/compose/: .env.dev  .env.example  docker-compose.dev.yml  docker-compose.prod.yml
main/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
main/src/: data.ts
main/src/app/: LayoutShell.tsx  dashboard.tsx  layout.tsx
main/src/app/(components)/chat/: AIChatBubble.tsx
main/src/app/(components)/dashboard/: ProjectCard.tsx  ResourceTable.tsx  UsageChart.tsx
main/src/app/(components)/discuss/: CreateDiscussionModal.tsx  DIscussionCard.tsx  DiscussionModal.tsx  TrendingDiscussionCard.tsx
main/src/app/(components)/entities/: Comment.json  Discuss.json  Event.json  PeerPoint.json  Project.json  Review.json  User.ts
main/src/app/(components)/events/: EventCalenderView.tsx  EventDetailModal.tsx
main/src/app/(components)/integration/: core.ts
main/src/app/(main)/: LayoutShell.tsx  dashboard.tsx  page.jsx
main/src/app/(main)/profile/: page.tsx  (+1 more)
main/src/app/discuss/: Discuss.tsx  page.tsx
main/src/app/forgot-password/: page.tsx
main/src/app/peerpoint/: PeerPoints.tsx  page.tsx
main/src/app/profile/: profile.tsx
main/src/app/projects/: ProjectShell.tsx
main/src/app/signIn/: SignIn.tsx  page.tsx
main/src/app/signUp/: SignUp.tsx
main/src/lib/: auth-client.ts  auth.ts
main/src/state/: StoreProvider.tsx  api.ts  hooks.ts  store.ts
main/src/state/dashboardSlice/: index.ts
main/src/state/marketSlice/: index.ts
main/src/styles/: tailwind.css
native/agent_core/: CMakeLists.txt
native/agent_core/include/kyntrix/: agent_core.h  config.h  event.h  version.h
native/agent_core/src/: agent_core.cpp  logging.cpp  logging.h
runtime/: .dockerignore  CMakeLists.txt  Dockerfile
runtime/container/: CMakeLists.txt  ct_image.cpp  ct_image.h  ct_mount.cpp  ct_mount.h  ct_namespace.cpp  ct_namespace.h
runtime/daemon/: CMakeLists.txt  daemon_server.cpp  daemon_server.h  instance_manager.cpp  instance_manager.h  main.cpp
servers/: package-lock.json  package.json  tsconfig.json
servers/agents/: .dockerignore  Dockerfile  package-lock.json  package.json  server.ts  tsconfig.json
servers/agents/auth/: api-keys.ts  auth.ts  index.ts  middleware.ts
servers/agents/middleware/: auth.ts
servers/agents/pipeline/: index.ts  llm_export.ts  persistence.ts  t1_parser.ts  t2_correlator.ts
servers/agents/routers/: auth.ts  ingest.ts  otlp.ts  reflection.ts  run.ts
servers/agents/src/: server.ts
servers/agents/storage/: redis.ts
servers/agents/testing/: ingest-test.ts  ws-test.ts
servers/agents/transforms/: otlpToTal.ts
servers/agents/ws/: hub.ts
servers/app/prisma/: schema.prisma
servers/app/src/routes/: projectRoutes.ts
servers/instance-manager/: Dockerfile  daemonClient.ts  index.ts  package-lock.json  package.json  runs.ts  tsconfig.json
servers/prisma/: seed.ts
servers/prisma/migrations/20250821222307_init/: migration.sql
servers/prisma/migrations/20250823192126_explore_marketplace_init/: migration.sql
servers/prisma/migrations/20250902051103_add_better_auth/: migration.sql
servers/runtime/native/container/: ct_mount.cpp
servers/runtime/src/: index.ts
servers/runtime/src/lib/: nativeBridge.ts
servers/runtime/src/os/: detect.ts
servers/runtime/src/routes/: containers.ts  hypervisor.ts
servers/runtime/src/scripts/: build_img.sh  mac-ensure-limac.sh
servers/src/: index.ts
servers/src/libs/: auth.ts  email.ts
(+16 files in other folders)
